# cli2mcp

./: .gitignore  DEBUGGING.md  README.md  curl.tools.json  pyproject.toml
examples/: curl.tools.json  debug_demo.sh  git.tools.json
examples/requests/: 1_initialize.json  2_initialized.json  3_list_tools.json  4_call_tool.json
src/cli2mcp/: __init__.py  __main__.py  cli.py  parser.py  scanner.py  server.py
src/cli2mcp/parsers/: __init__.py  cobra.py  common.py  gnu.py  plain.py
