[project]
name = "cli2mcp"
version = "0.1.0"
description = "Turn any CLI tool into an MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
]

[project.scripts]
cli2mcp = "cli2mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli2mcp"]
